Issue #4662: os.tempnam(), os.tmpfile() and os.tmpnam() now raise a py3k DeprecationWarning.